--- a/package.json
+++ b/package.json
@@ -19,38 +19,38 @@
   ],
   "author": "Jose Quezada",
   "license": "ISC",
+  "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "breakpoint-sass": "^2.7.1",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.2.1",
-    "file-loader": "^3.0.1",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.2.2",
+    "eslint-loader": "^3.0.0",
+    "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "rimraf": "^2.7.1",
-    "sass-loader": "^7.2.0",
+    "rimraf": "^3.0.0",
+    "sass-loader": "^7.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4"
   },
   "browserslist": [
     "> 1%",
