--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "pug-loader": "^2.4.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^7.3.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
