--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
         "eol-last": "off",
         "max-len": "off",
         "comma-dangle": ["error", "never"],
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
         "react/jsx-indent": ["warn", 4],
         "react/jsx-indent-props": ["error", 4],
         "react/prop-types": "warn",
