--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pug": "^2.0.4",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
+    "react-axe": "^3.2.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^7.3.1",
     "stylelint": "^10.1.0",
