--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
                 "not < 2%",
                 "ie 11"
             ],
-            "useBuiltIns": "entry",
+            "useBuiltIns": "usage",
             "corejs": {
                 "version": 3,
                 "proposals": true
