--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,7 @@
         "@babel/preset-react"
     ],
     "plugins": [
-        ["@babel/plugin-proposal-class-properties"]
+        "react-hot-loader/babel",
+        "@babel/plugin-proposal-class-properties"
     ]
 }
