--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
