--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,7 @@
     ],
     "plugins": [
         "react-hot-loader/babel",
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-syntax-dynamic-import"
     ]
 }
