--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "@hot-loader/react-dom": "^16.14.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^10.4.9",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "breakpoint-sass": "^2.7.1",
-    "css-loader": "^3.6.0",
+    "css-loader": "^5.0.0",
     "eslint": "^7.12.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-loader": "^4.0.2",
@@ -63,7 +63,8 @@
     "jest": "^26.6.1",
     "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.1.4",
+    "postcss-loader": "^4.0.4",
     "pug": "^3.0.0",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
