--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "rimraf dist coverage",
     "dev": "npm run clean && webpack --config webpack.config.dev.js",
     "build": "npm run clean && webpack --config webpack.config.prod.js",
-    "start": "npm run clean && webpack-dev-server --config webpack.config.dev.js",
+    "start": "npm run clean && webpack serve --config webpack.config.dev.js",
     "prod": "npm run build",
     "test": "jest --coverage"
   },
@@ -76,7 +76,7 @@
     "stylelint-webpack-plugin": "^2.1.1",
     "webpack": "^5.3.2",
     "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.3.0"
   },
