--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.1",
     "mini-css-extract-plugin": "^1.2.1",
-    "node-sass": "^4.14.1",
     "postcss": "^8.1.4",
     "postcss-loader": "^4.0.4",
     "pug": "^3.0.2",
@@ -70,6 +69,7 @@
     "pug-loader": "^2.4.0",
     "react-axe": "^3.5.4",
     "rimraf": "^3.0.2",
+    "sass": "^1.32.10",
     "sass-loader": "^10.0.4",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
