--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "Jose Quezada",
   "license": "ISC",
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.10.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,13 +42,13 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@hot-loader/react-dom": "^17.0.0",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "autoprefixer": "^10.0.1",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "breakpoint-sass": "^2.7.1",
-    "css-loader": "^5.0.0",
+    "css-loader": "^5.2.2",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^4.0.2",
@@ -60,17 +60,18 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
-    "jest": "^26.6.1",
-    "mini-css-extract-plugin": "^1.2.1",
-    "postcss": "^8.1.4",
-    "postcss-loader": "^4.0.4",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.5.0",
+    "post-loader": "^2.0.0",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^5.2.0",
     "pug": "^3.0.2",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
     "react-axe": "^3.5.4",
     "rimraf": "^3.0.2",
     "sass": "^1.32.10",
-    "sass-loader": "^10.0.4",
+    "sass-loader": "^11.0.1",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
