--- a/package.json
+++ b/package.json
@@ -73,8 +73,9 @@
     "sass": "^1.32.10",
     "sass-loader": "^11.0.1",
     "stylelint": "^13.7.2",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "stylint": "^2.0.0",
     "webpack": "^5.33.2",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^4.6.0",
