--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,7 @@
         "@babel/preset-react"
     ],
     "plugins": [
-        "react-hot-loader/babel",
+        "react-refresh/babel",
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-syntax-dynamic-import"
     ]
