--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
@@ -41,7 +40,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
-    "@hot-loader/react-dom": "^17.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "autoprefixer": "^10.2.5",
@@ -69,6 +68,7 @@
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
     "react-axe": "^3.5.4",
+    "react-refresh": "^0.9.0",
     "rimraf": "^3.0.2",
     "sass": "^1.32.10",
     "sass-loader": "^11.0.1",
