--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.1.1",
     "@babel/core": "^7.13.15",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -67,7 +68,6 @@
     "pug": "^3.0.2",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
-    "react-axe": "^3.5.4",
     "react-refresh": "^0.9.0",
     "rimraf": "^3.0.2",
     "sass": "^1.32.10",
